--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -10,11 +10,45 @@
 }
 
 .card:hover {
-  margin-left: 1.5rem;
+  transform: scale(1.05);
   /* width: 85%; */
 }
 
-.colMenu {
+.card h3{
+  max-width: 10rem;
+}
+
+.card p{
+  max-width: 80%;
+}
+
+.innerColumn{
+  min-width: 20rem;
+  max-width: 45rem;
+  min-height: 15rem;
+  max-height: 75rem;
+  border-radius: 4px;
+  margin: 0 auto;
+  margin-left: 1rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.columnHeader{
+  display: flex;
+  justify-content: space-between;
+  height: 3rem;
+  margin-bottom: .5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.columnHeader h3{
+  font-size: 1.75rem;
+  text-decoration: underline;
+  font-weight: 450;
+  margin-top: 0.25rem;
+}
+
+.addButton {
   margin-top: 0.5rem;
   width: 3rem;
   height: 3rem;
@@ -24,12 +58,16 @@
   border: none;
   border-radius: 50px;
   transition: all 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.colMenu:hover {
+.addButton:hover {
   background-color: #515751;
   color: #f5f9e9;
   margin-top: 0.25rem;
 }
+
 
 .inputPop {
   position: absolute;
@@ -47,6 +85,7 @@
   border-radius: 4px;
   color: #f5f9e9;
   padding: 0.5rem;
+  box-shadow: 4px 4px 20px 10px rgba(81, 87, 81, 0.4);
 }
 
 .inputPop h1 {
@@ -61,5 +100,17 @@
   width: 5rem;
   height: 1.5rem;
   margin: 0.25rem auto;
-  /* margin-bottom: 0.25rem; */
+}
+.inputPop input[type=submit]{
+  background-color: #f5f9e9;
+  border: none;
+  border-radius: 4px;
+  width: 5rem;
+  height: 1.5rem;
+  margin: 0.25rem auto;
+}
+
+.cardContent{
+  margin-top: 0.5rem;
+  margin-right: 0px;
 }
